add user endpoint add, delete bulk shortlinks
